devtools/envoy-standalone/example_configs/v3/10-sepp-actions-counter.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
stats_config:
  stats_tags:
  - regex: "^((?:vhost\\..+?\\.vcluster\\..+?|cluster\\.egress)\\.n8e\\..+?\\.s5e\\.(.+?)\\.)"
    tag_name: service
  - fixed_value: sepp
    tag_name: nf_type
  - regex: "^((?:vhost\\..+?\\.vcluster\\..+?|cluster\\.egress|.*?http\\.ingress)\\.n8e\\.(.+?)\\.)"
    tag_name: nf_instance
  - regex: "^((?:vhost\\..+?\\.vcluster\\..+?|cluster\\.egress|http\\.ingress)\\.n8e\\..+?\\.g3p\\.(.+?)\\.)"
    tag_name: group
  - regex: "^((?:listener.+?\\.http\\.ingress)\\.n8e\\..+?\\.g3p\\.(.+?)\\.)"
    tag_name: group_internal
  - regex: "^(vhost\\..*?\\.vcluster\\.(.+?)\\.n8e)"
    tag_name: operation
  - tag_name: envoy.response_code
  - tag_name: envoy.response_code_class
  - tag_name: envoy.http_user_agent
  - regex: "^(vhost\\..+?\\.vcluster\\.(.+?)\\.n8e)"
    tag_name: envoy.virtual_cluster
  - tag_name: envoy.fault_downstream_cluster
  - tag_name: envoy.ssl_cipher
  - tag_name: cipher_suite
  - tag_name: envoy.tcp_prefix
  - tag_name: envoy.clientssl_prefix
  - tag_name: envoy.ratelimit_prefix
  - tag_name: envoy.cluster_name
  - tag_name: envoy.http_conn_manager_prefix
  - tag_name: envoy.listener_address
  - regex: "^vhost\\.((.*?)\\.vcluster)"
    tag_name: envoy.virtual_host
  - tag_name: envoy.rds_route_config
  - tag_name: envoy.worker_id
  use_all_default_tags: false
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          common_http_protocol_options:
            idle_timeout: 3600s
          access_log:
            name: "envoy.access_loggers.file"
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "access.log"
              format: "[%START_TIME(%FT%T.%3f%z)%] %DURATION% %REQUEST_DURATION% %RESPONSE_DURATION% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %REQ(:METHOD)% %PROTOCOL% %RESPONSE_CODE% %RESPONSE_CODE_DETAILS% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% %REQ(USER-AGENT)% %REQ(X-REQUEST-ID)% %REQ(:AUTHORITY)% %ROUTE_NAME% %UPSTREAM_CLUSTER% %UPSTREAM_HOST% %UPSTREAM_TRANSPORT_FAILURE_REASON%\n"
          stat_prefix: ingress.n8e.instance_1.g3p.ingress

          route_config:
            name: vpn_own_routes
            virtual_hosts:
            - domains:
              - "*"
              name: int_fwd_service
              routes:
              - match:
                  headers:
                  - name: x-host
                    present_match: true
                  - exact_match: universal_pool
                    name: x-cluster
                  prefix: "/"
                metadata:
                  filter_metadata:
                    envoy.filters.http.sepp:
                      request_fc: default_ingress
                      response_fc: response_processing
                route:
                  auto_host_rewrite: true
                  cluster: universal_pool
                  retry_policy:
                    host_selection_retry_max_attempts: '3'
                    num_retries: 3
                    per_try_timeout: 2.345s
                    retriable_status_codes:
                    - 500
                    - 501
                    - 502
                    - 503
                    - 504
                    retry_on: retriable-status-codes,connect-failure,refused-stream,reset
                  timeout: 3.455999999s
            - domains:
              - sepp.ericsson.se:30671
              name: int_service
              routes:
              - match:
                  headers:
                  - exact_match: eric-chfsim-3-mnc-456-mcc-456
                    name: x-host
                  - exact_match: occ
                    name: x-cluster
                  prefix: "/"
                metadata:
                  filter_metadata:
                    envoy.filters.http.sepp:
                      request_fc: default_ingress
                      response_fc: response_processing
                route:
                  auto_host_rewrite: true
                  cluster: occ
                  retry_policy:
                    host_selection_retry_max_attempts: '3'
                    num_retries: 3
                    per_try_timeout: 2.345s
                    retriable_status_codes:
                    - 500
                    - 501
                    - 502
                    - 503
                    - 504
                    retry_host_predicate:
                    - name: envoy.retry_host_predicates.previous_hosts
                    - name: envoy.retry_host_predicates.omit_host_metadata
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.retry.host.omit_host_metadata.v3.OmitHostMetadataConfig
                        metadata_match:
                          filter_metadata:
                            envoy.lb:
                              host: eric-chfsim-3-mnc-456-mcc-456
                    retry_on: retriable-status-codes,connect-failure,refused-stream,reset
                    retry_priority:
                      name: envoy.retry_priorities.previous_priorities
                      typed_config:
                        "@type": type.googleapis.com/envoy.config.retry.previous_priorities.PreviousPrioritiesConfig
                        update_frequency: 1
                  timeout: 3.455999999s
              - match:
                  headers:
                  - exact_match: eric-chfsim-4-mnc-456-mcc-456
                    name: x-host
                  - exact_match: occ
                    name: x-cluster
                  prefix: "/"
                metadata:
                  filter_metadata:
                    envoy.filters.http.sepp:
                      request_fc: default_ingress
                      response_fc: response_processing
                route:
                  auto_host_rewrite: true
                  cluster: occ
                  retry_policy:
                    host_selection_retry_max_attempts: '3'
                    num_retries: 3
                    per_try_timeout: 2.345s
                    retriable_status_codes:
                    - 500
                    - 501
                    - 502
                    - 503
                    - 504
                    retry_host_predicate:
                    - name: envoy.retry_host_predicates.previous_hosts
                    - name: envoy.retry_host_predicates.omit_host_metadata
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.retry.host.omit_host_metadata.v3.OmitHostMetadataConfig
                        metadata_match:
                          filter_metadata:
                            envoy.lb:
                              host: eric-chfsim-4-mnc-456-mcc-456
                    retry_on: retriable-status-codes,connect-failure,refused-stream,reset
                    retry_priority:
                      name: envoy.retry_priorities.previous_priorities
                      typed_config:
                        "@type": type.googleapis.com/envoy.config.retry.previous_priorities.PreviousPrioritiesConfig
                        update_frequency: 1
                  timeout: 3.455999999s
              - match:
                  headers:
                  - exact_match: eric-chfsim-5-mnc-456-mcc-456
                    name: x-host
                  - exact_match: occ
                    name: x-cluster
                  prefix: "/"
                metadata:
                  filter_metadata:
                    envoy.filters.http.sepp:
                      request_fc: default_ingress
                      response_fc: response_processing
                route:
                  auto_host_rewrite: true
                  cluster: occ
                  retry_policy:
                    host_selection_retry_max_attempts: '3'
                    num_retries: 3
                    per_try_timeout: 2.345s
                    retriable_status_codes:
                    - 500
                    - 501
                    - 502
                    - 503
                    - 504
                    retry_host_predicate:
                    - name: envoy.retry_host_predicates.previous_hosts
                    - name: envoy.retry_host_predicates.omit_host_metadata
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.retry.host.omit_host_metadata.v3.OmitHostMetadataConfig
                        metadata_match:
                          filter_metadata:
                            envoy.lb:
                              host: eric-chfsim-5-mnc-456-mcc-456
                    retry_on: retriable-status-codes,connect-failure,refused-stream,reset
                    retry_priority:
                      name: envoy.retry_priorities.previous_priorities
                      typed_config:
                        "@type": type.googleapis.com/envoy.config.retry.previous_priorities.PreviousPrioritiesConfig
                        update_frequency: 1
                  timeout: 3.455999999s
              - match:
                  headers:
                  - exact_match: sepp_rp_A
                    name: x-cluster
                  prefix: "/"
                metadata:
                  filter_metadata:
                    envoy.filters.http.sepp:
                      request_fc: default_ingress
                      response_fc: response_processing
                route:
                  auto_host_rewrite: true
                  cluster: sepp_rp_A
                  retry_policy:
                    host_selection_retry_max_attempts: '3'
                    num_retries: 3
                    per_try_timeout: 2.345s
                    retriable_status_codes:
                    - 500
                    - 501
                    - 502
                    - 503
                    - 504
                    retry_host_predicate:
                    - name: envoy.retry_host_predicates.previous_hosts
                    retry_on: retriable-status-codes,connect-failure,refused-stream,reset
                    retry_priority:
                      name: envoy.retry_priorities.previous_priorities
                      typed_config:
                        "@type": type.googleapis.com/envoy.config.retry.previous_priorities.PreviousPrioritiesConfig
                        update_frequency: 1
                  timeout: 3.455999999s
              - match:
                  headers:
                  - name: x-host
                    present_match: true
                  - exact_match: universal_pool
                    name: x-cluster
                  prefix: "/"
                metadata:
                  filter_metadata:
                    envoy.filters.http.sepp:
                      request_fc: default_ingress
                      response_fc: response_processing
                route:
                  auto_host_rewrite: true
                  cluster: universal_pool
                  retry_policy:
                    host_selection_retry_max_attempts: '3'
                    num_retries: 3
                    per_try_timeout: 2.345s
                    retriable_status_codes:
                    - 500
                    - 501
                    - 502
                    - 503
                    - 504
                    retry_on: retriable-status-codes,connect-failure,refused-stream,reset
                  timeout: 3.455999999s
              - match:
                  prefix: "/"
                metadata:
                  filter_metadata:
                    envoy.filters.http.sepp:
                      request_fc: default_ingress
                      response_fc: response_processing
                route:
                  auto_host_rewrite: true
                  cluster_header: not_used
                  timeout: 30s
            - domains:
              - rp_A.sepp.ericsson.se:31028
              name: rp_rp_A_service
              routes:
              - match:
                  headers:
                  - exact_match: eric-chfsim-3-mnc-456-mcc-456
                    name: x-host
                  - exact_match: occ
                    name: x-cluster
                  prefix: "/"
                metadata:
                  filter_metadata:
                    envoy.filters.http.sepp:
                      request_fc: default_ingress
                      response_fc: response_processing
                route:
                  auto_host_rewrite: true
                  cluster: occ
                  retry_policy:
                    host_selection_retry_max_attempts: '3'
                    num_retries: 3
                    per_try_timeout: 2.345s
                    retriable_status_codes:
                    - 500
                    - 501
                    - 502
                    - 503
                    - 504
                    retry_host_predicate:
                    - name: envoy.retry_host_predicates.previous_hosts
                    - name: envoy.retry_host_predicates.omit_host_metadata
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.retry.host.omit_host_metadata.v3.OmitHostMetadataConfig
                        metadata_match:
                          filter_metadata:
                            envoy.lb:
                              host: eric-chfsim-3-mnc-456-mcc-456
                    retry_on: retriable-status-codes,connect-failure,refused-stream,reset
                    retry_priority:
                      name: envoy.retry_priorities.previous_priorities
                      typed_config:
                        "@type": type.googleapis.com/envoy.config.retry.previous_priorities.PreviousPrioritiesConfig
                        update_frequency: 1
                  timeout: 3.455999999s
              - match:
                  headers:
                  - exact_match: eric-chfsim-4-mnc-456-mcc-456
                    name: x-host
                  - exact_match: occ
                    name: x-cluster
                  prefix: "/"
                metadata:
                  filter_metadata:
                    envoy.filters.http.sepp:
                      request_fc: default_ingress
                      response_fc: response_processing
                route:
                  auto_host_rewrite: true
                  cluster: occ
                  retry_policy:
                    host_selection_retry_max_attempts: '3'
                    num_retries: 3
                    per_try_timeout: 2.345s
                    retriable_status_codes:
                    - 500
                    - 501
                    - 502
                    - 503
                    - 504
                    retry_host_predicate:
                    - name: envoy.retry_host_predicates.previous_hosts
                    - name: envoy.retry_host_predicates.omit_host_metadata
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.retry.host.omit_host_metadata.v3.OmitHostMetadataConfig
                        metadata_match:
                          filter_metadata:
                            envoy.lb:
                              host: eric-chfsim-4-mnc-456-mcc-456
                    retry_on: retriable-status-codes,connect-failure,refused-stream,reset
                    retry_priority:
                      name: envoy.retry_priorities.previous_priorities
                      typed_config:
                        "@type": type.googleapis.com/envoy.config.retry.previous_priorities.PreviousPrioritiesConfig
                        update_frequency: 1
                  timeout: 3.455999999s
              - match:
                  headers:
                  - exact_match: eric-chfsim-5-mnc-456-mcc-456
                    name: x-host
                  - exact_match: occ
                    name: x-cluster
                  prefix: "/"
                metadata:
                  filter_metadata:
                    envoy.filters.http.sepp:
                      request_fc: default_ingress
                      response_fc: response_processing
                route:
                  auto_host_rewrite: true
                  cluster: occ
                  retry_policy:
                    host_selection_retry_max_attempts: '3'
                    num_retries: 3
                    per_try_timeout: 2.345s
                    retriable_status_codes:
                    - 500
                    - 501
                    - 502
                    - 503
                    - 504
                    retry_host_predicate:
                    - name: envoy.retry_host_predicates.previous_hosts
                    - name: envoy.retry_host_predicates.omit_host_metadata
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.retry.host.omit_host_metadata.v3.OmitHostMetadataConfig
                        metadata_match:
                          filter_metadata:
                            envoy.lb:
                              host: eric-chfsim-5-mnc-456-mcc-456
                    retry_on: retriable-status-codes,connect-failure,refused-stream,reset
                    retry_priority:
                      name: envoy.retry_priorities.previous_priorities
                      typed_config:
                        "@type": type.googleapis.com/envoy.config.retry.previous_priorities.PreviousPrioritiesConfig
                        update_frequency: 1
                  timeout: 3.455999999s
              - match:
                  headers:
                  - exact_match: sepp_rp_A
                    name: x-cluster
                  prefix: "/"
                metadata:
                  filter_metadata:
                    envoy.filters.http.sepp:
                      request_fc: default_ingress
                      response_fc: response_processing
                route:
                  auto_host_rewrite: true
                  cluster: sepp_rp_A
                  retry_policy:
                    host_selection_retry_max_attempts: '3'
                    num_retries: 3
                    per_try_timeout: 2.345s
                    retriable_status_codes:
                    - 500
                    - 501
                    - 502
                    - 503
                    - 504
                    retry_host_predicate:
                    - name: envoy.retry_host_predicates.previous_hosts
                    retry_on: retriable-status-codes,connect-failure,refused-stream,reset
                    retry_priority:
                      name: envoy.retry_priorities.previous_priorities
                      typed_config:
                        "@type": type.googleapis.com/envoy.config.retry.previous_priorities.PreviousPrioritiesConfig
                        update_frequency: 1
                  timeout: 3.455999999s
              - match:
                  headers:
                  - name: x-host
                    present_match: true
                  - exact_match: universal_pool
                    name: x-cluster
                  prefix: "/"
                metadata:
                  filter_metadata:
                    envoy.filters.http.sepp:
                      request_fc: default_ingress
                      response_fc: response_processing
                route:
                  auto_host_rewrite: true
                  cluster: universal_pool
                  retry_policy:
                    host_selection_retry_max_attempts: '3'
                    num_retries: 3
                    per_try_timeout: 2.345s
                    retriable_status_codes:
                    - 500
                    - 501
                    - 502
                    - 503
                    - 504
                    retry_on: retriable-status-codes,connect-failure,refused-stream,reset
                  timeout: 3.455999999s
              - match:
                  prefix: "/"
                metadata:
                  filter_metadata:
                    envoy.filters.http.sepp:
                      request_fc: default_ingress
                      response_fc: response_processing
                route:
                  auto_host_rewrite: true
                  cluster_header: not_used
                  timeout: 30s


          http_filters:
          - name: envoy.filters.http.buffer
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
              max_request_bytes: 65535
          - name: envoy.filters.http.sepp
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.SeppConfig
              metrics:
              - name: "reject_543"
                type: COUNTER
              - name: "reject_544"
                type: COUNTER
              - name: "reject_545"
                type: COUNTER
              request_fc_route_metadata_key: request_fc
              response_fc_route_metadata_key: response_fc
              filter_cases:
                - name: default_ingress
                  filter_data:
                  - name: apiRoot_data2
                    header: 3gpp-Sbi-target-apiRoot2
                    variable_name: mcc
                  - name: apiRoot_data
                    header: 3gpp-Sbi-target-apiRoot
                    extractor_regex: eric-chfsim-\d+-mnc-(?P<mnc>\d+)-mcc-(?P<mcc>\d+)
                  - name: chfsim_data
                    header: 3gpp-Sbi-target-apiRoot
                    extractor_regex: eric-(?P<chfsim>chfsim-\d+?)-.+
                  filter_rules:
                  - name: csepp_to_rp_A
                    predicate_expression: 
                      op_equals: { typed_config1: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_var: mcc }, typed_config2: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_string: '123' }}
                    actions:
                    - action_add_header:
                        name: x-header-added
                        value: "value added"
                    - action_modify_header:
                        name: x-replace-me
                        replace_value: "replaced value"
                    - action_remove_header:
                        name: x-remove-me
                    - action_goto_filter_case: continuation_fc
                  - name: direct_response_plain
                    predicate_expression:
                      op_equals: { typed_config1: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_var: mcc }, typed_config2: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_string: '987' }}
                    actions:
                    - action_inc_counter: "reject_543"
                    - action_reject_message:
                        status: 543
                        title: "reject test"
                        message_format: PLAIN_TEXT
                  - name: direct_response_json1
                    predicate_expression:
                      op_equals: { typed_config1: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_var: mcc }, typed_config2: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_string: '988' }}
                    actions:
                    - action_inc_counter: "reject_544"
                    - action_reject_message:
                        status: 544
                        title: "reject test json1"
                        message_format: JSON
                  - name: direct_response_json2
                    predicate_expression:
                      op_equals: { typed_config1: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_var: mcc }, typed_config2: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_string: '989' }}
                    actions:
                    - action_inc_counter: "reject_5sd45"
                    - action_reject_message:
                        status: 545
                        title: "reject test json2"
                  - name: drop_message
                    predicate_expression:
                      op_equals: { typed_config1: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_var: mcc }, typed_config2: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_string: '950' }}
                    actions:
                    - action_log:
                        text: "### Log message from test-case: ERROR ###"
                        log_level: ERROR
                    - action_log:
                        text: "### Log message from test-case: WARN ###"
                        log_level: WARN
                    - action_log:
                        text: "### Log message from test-case: INFO ###"
                        log_level: INFO
                    - action_log:
                        text: "### Log message from test-case: DEBUG ###"
                        log_level: DEBUG
                    - action_log:
                        text: "### Log message from test-case TRACE ###"
                        log_level: TRACE
                    - action_drop_message: true
                  - name: psepp_to_dfw
                    predicate_expression:
                      op_and:
                        arg1:
                          op_equals: { typed_config1: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_var: mnc }, typed_config2: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_string: '456'}}
                        arg2:
                          op_and:
                            arg1:
                              op_equals: { typed_config1: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_var: mcc }, typed_config2: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_string: '456' }}
                            arg2:
                              op_or:
                                arg1:
                                  op_equals: { typed_config1: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_var: chfsim }, typed_config2: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_string: 'chfsim-6'}}
                                arg2:
                                  op_or:
                                    arg1:
                                      op_equals: { typed_config1: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_var: chfsim }, typed_config2: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_string: 'chfsim-7'}}
                                    arg2:
                                      op_equals: { typed_config1: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_var: chfsim }, typed_config2: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_string: 'chfsim-8'}}
                    actions:
                    - action_route_to_pool:
                        pool_name: universal_pool
                        routing_behaviour: TARGET_API_ROOT_STRICT
                  - name: psepp_to_pref
                    predicate_expression:
                      op_and:
                        arg1:
                          op_equals: { typed_config1: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_var: mnc }, typed_config2: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_string: '456' }}
                        arg2:
                          op_equals: { typed_config1: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_var: mcc }, typed_config2: {'@type': 'type.googleapis.com/envoy.extensions.filters.http.sepp.v3alpha.Value',  term_string: '456' }}
                    actions:
                    - action_route_to_pool:
                        pool_name: occ
                        routing_behaviour: TARGET_API_ROOT_PREFERRED
                - name: continuation_fc
                  filter_rules:
                  - name: remove
                    predicate_expression: 
                      term_boolean: true
                    actions:
                    - action_remove_header:
                        name: x-remove-me-later
                    - action_goto_filter_case: final_fc
                - name: final_fc
                  filter_rules:
                  - name: replace_route
                    predicate_expression: 
                      term_boolean: true
                    actions:
                    - action_modify_header:
                        name: x-replace-me-later
                        replace_value: 'later value' 
                    - action_route_to_roaming_partner:
                        roaming_partner_name: rp_A
                        routing_behaviour: ROUND_ROBIN
                - name: response_processing
                  filter_rules:
                  - name: add_resp_header
                    predicate_expression: 
                      term_boolean: true
                    actions:
                    - action_add_header:
                        name: x-added-by-response
                        value: "response path triggered"
                    - action_remove_header:
                        name: x-lua
              roaming_partners:
                - name: rp_A
                  pool_name: sepp_rp_A    
          - name: envoy.filters.http.dynamic_forward_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
              dns_cache_config:
                name: dynamic_forward_proxy_cache_config
                host_ttl: 31536000s
                dns_lookup_family: V4_ONLY
          - name: envoy.filters.http.router 
  clusters:
  - name: occ
    cluster_type:
      name: envoy.clusters.aggregate
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.clusters.aggregate.v3.ClusterConfig
        clusters:
        - occ_subset
        - occ_all
    common_http_protocol_options:
      idle_timeout: 3600s
    connect_timeout: 2s
    http2_protocol_options:
      allow_connect: true
    lb_policy: CLUSTER_PROVIDED
    upstream_bind_config:
      socket_options:
      - description: TCP_USER_TIMEOUT
        int_value: '5030'
        level: '6'
        name: '18'
      source_address:
        address: 0.0.0.0
        port_value: 0
    upstream_connection_options:
      tcp_keepalive:
        keepalive_interval: 5
        keepalive_probes: 6
        keepalive_time: 5

  - name: occ_all
    common_http_protocol_options:
      idle_timeout: 3600s
    connect_timeout: 2s
    dns_lookup_family: V4_ONLY
    http2_protocol_options:
      allow_connect: true
    upstream_bind_config:
      socket_options:
      - description: TCP_USER_TIMEOUT
        int_value: '5030'
        level: '6'
        name: '18'
      source_address:
        address: 0.0.0.0
        port_value: 0
    upstream_connection_options:
      tcp_keepalive:
        keepalive_interval: 5
        keepalive_probes: 6
        keepalive_time: 5
    type: STRICT_DNS
    load_assignment:
      cluster_name: occ_all
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-3-mnc-456-mcc-456
                port_value: 80
            health_check_config: {}
            hostname: eric-chfsim-3-mnc-456-mcc-456:80
          health_status: HEALTHY
          load_balancing_weight: 100
          metadata:
            filter_metadata:
              envoy.lb:
                host: eric-chfsim-3-mnc-456-mcc-456
                pool: occ
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-4-mnc-456-mcc-456
                port_value: 80
            health_check_config: {}
            hostname: eric-chfsim-4-mnc-456-mcc-456:80
          health_status: HEALTHY
          load_balancing_weight: 100
          metadata:
            filter_metadata:
              envoy.lb:
                host: eric-chfsim-4-mnc-456-mcc-456
                pool: occ
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-5-mnc-456-mcc-456
                port_value: 80
            health_check_config: {}
            hostname: eric-chfsim-5-mnc-456-mcc-456:80
          health_status: HEALTHY
          load_balancing_weight: 100
          metadata:
            filter_metadata:
              envoy.lb:
                host: eric-chfsim-5-mnc-456-mcc-456
                pool: occ

  - name: occ_subset
    common_http_protocol_options:
      idle_timeout: 3600s
    connect_timeout: 2s
    dns_lookup_family: V4_ONLY
    http2_protocol_options:
      allow_connect: true
    lb_subset_config:
      fallback_policy: ANY_ENDPOINT
      subset_selectors:
      - keys:
        - host
    upstream_bind_config:
      socket_options:
      - description: TCP_USER_TIMEOUT
        int_value: '5030'
        level: '6'
        name: '18'
      source_address:
        address: 0.0.0.0
        port_value: 0
    upstream_connection_options:
      tcp_keepalive:
        keepalive_interval: 5
        keepalive_probes: 6
        keepalive_time: 5
    type: STRICT_DNS
    load_assignment:
      cluster_name: occ_subset
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-3-mnc-456-mcc-456
                port_value: 80
            health_check_config: {}
            hostname: eric-chfsim-3-mnc-456-mcc-456:80
          health_status: HEALTHY
          load_balancing_weight: 100
          metadata:
            filter_metadata:
              envoy.lb:
                host: eric-chfsim-3-mnc-456-mcc-456
                pool: occ
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-4-mnc-456-mcc-456
                port_value: 80
            health_check_config: {}
            hostname: eric-chfsim-4-mnc-456-mcc-456:80
          health_status: HEALTHY
          load_balancing_weight: 100
          metadata:
            filter_metadata:
              envoy.lb:
                host: eric-chfsim-4-mnc-456-mcc-456
                pool: occ
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-5-mnc-456-mcc-456
                port_value: 80
            health_check_config: {}
            hostname: eric-chfsim-5-mnc-456-mcc-456:80
          health_status: HEALTHY
          load_balancing_weight: 100
          metadata:
            filter_metadata:
              envoy.lb:
                host: eric-chfsim-5-mnc-456-mcc-456
                pool: occ

  - name: sepp_rp_A
    common_http_protocol_options:
      idle_timeout: 3600s
    connect_timeout: 2s
    dns_lookup_family: V4_ONLY
    http2_protocol_options:
      allow_connect: true
    upstream_bind_config:
      socket_options:
      - description: TCP_USER_TIMEOUT
        int_value: '5030'
        level: '6'
        name: '18'
      source_address:
        address: 0.0.0.0
        port_value: 0
    upstream_connection_options:
      tcp_keepalive:
        keepalive_interval: 5
        keepalive_probes: 6
        keepalive_time: 5
    type: STRICT_DNS
    load_assignment:
      cluster_name: sepp_rp_A
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-1-mnc-123-mcc-123
                port_value: 80
            health_check_config: {}
            hostname: eric-chfsim-1-mnc-123-mcc-123:80
          health_status: HEALTHY
          load_balancing_weight: 100
          metadata:
            filter_metadata:
              envoy.lb:
                host: eric-chfsim-1-mnc-123-mcc-123
                pool: sepp_rp_A
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-2-mnc-123-mcc-123
                port_value: 80
            health_check_config: {}
            hostname: eric-chfsim-2-mnc-123-mcc-123:80
          health_status: HEALTHY
          load_balancing_weight: 100
          metadata:
            filter_metadata:
              envoy.lb:
                host: eric-chfsim-2-mnc-123-mcc-123
                pool: sepp_rp_A

  - name: universal_pool
    cluster_type:
      name: envoy.clusters.dynamic_forward_proxy
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
        dns_cache_config:
          dns_lookup_family: V4_ONLY
          host_ttl: 31536000s
          name: dynamic_forward_proxy_cache_config
    common_http_protocol_options:
      idle_timeout: 3600s
    connect_timeout: 2s
    http2_protocol_options:
      allow_connect: true
    lb_policy: CLUSTER_PROVIDED
    upstream_bind_config:
      socket_options:
      - description: TCP_USER_TIMEOUT
        int_value: '5030'
        level: '6'
        name: '18'
      source_address:
        address: 0.0.0.0
        port_value: 0
    upstream_connection_options:
      tcp_keepalive:
        keepalive_interval: 5
        keepalive_probes: 6
        keepalive_time: 5


  - name: chfsim
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: chf-region1-siteA
      endpoints:
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-1-mnc-123-mcc-123
                port_value: 80
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-2-mnc-123-mcc-123
                port_value: 80
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-3-mnc-123-mcc-123
                port_value: 80
