devtools/envoy-standalone/example_configs/v3/12-sepp-subsets.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
stats_config:
  stats_tags:
  - regex: "^((?:vhost\\..+?\\.vcluster\\..+?|cluster\\.egress)\\.n8e\\..+?\\.s5e\\.(.+?)\\.)"
    tag_name: service
  - fixed_value: sepp
    tag_name: nf_type
  - regex: "^((?:vhost\\..+?\\.vcluster\\..+?|cluster\\.egress|.*?http\\.ingress)\\.n8e\\.(.+?)\\.)"
    tag_name: nf_instance
  - regex: "^((?:vhost\\..+?\\.vcluster\\..+?|cluster\\.egress|http\\.ingress)\\.n8e\\..+?\\.g3p\\.(.+?)\\.)"
    tag_name: group
  - regex: "^((?:listener.+?\\.http\\.ingress)\\.n8e\\..+?\\.g3p\\.(.+?)\\.)"
    tag_name: group_internal
  - regex: "^(vhost\\..*?\\.vcluster\\.(.+?)\\.n8e)"
    tag_name: operation
  - tag_name: envoy.response_code
  - tag_name: envoy.response_code_class
  - tag_name: envoy.http_user_agent
  - regex: "^(vhost\\..+?\\.vcluster\\.(.+?)\\.n8e)"
    tag_name: envoy.virtual_cluster
  - tag_name: envoy.fault_downstream_cluster
  - tag_name: envoy.ssl_cipher
  - tag_name: cipher_suite
  - tag_name: envoy.tcp_prefix
  - tag_name: envoy.clientssl_prefix
  - tag_name: envoy.ratelimit_prefix
  - tag_name: envoy.cluster_name
  - tag_name: envoy.http_conn_manager_prefix
  - tag_name: envoy.listener_address
  - regex: "^vhost\\.((.*?)\\.vcluster)"
    tag_name: envoy.virtual_host
  - tag_name: envoy.rds_route_config
  - tag_name: envoy.worker_id
  use_all_default_tags: false
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          common_http_protocol_options:
            idle_timeout: 3600s
          access_log:
            name: "envoy.access_loggers.file"
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/dev/stdout"
              format: "[%START_TIME(%FT%T.%3f%z)%] %DURATION% %REQUEST_DURATION% %RESPONSE_DURATION% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %REQ(:METHOD)% %PROTOCOL% %RESPONSE_CODE% %RESPONSE_CODE_DETAILS% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% %REQ(USER-AGENT)% %REQ(X-REQUEST-ID)% %REQ(:AUTHORITY)% %ROUTE_NAME% %UPSTREAM_CLUSTER% %UPSTREAM_HOST% %UPSTREAM_TRANSPORT_FAILURE_REASON%\n"
          stat_prefix: ingress.n8e.instance_1.g3p.ingress

          route_config:
            name: vpn_own_routes
            virtual_hosts:
            - domains:
              - "*"
              name: int_fwd_service
              routes:
              - match:
                  prefix: "/"
                route:
                  auto_host_rewrite: true
                  cluster: occ_subset
                  retry_policy:
                    host_selection_retry_max_attempts: '3'
                    num_retries: 3
                    per_try_timeout: 2s
                    retriable_status_codes:
                    - 500
                    - 501
                    - 502
                    - 503
                    - 504
                    retry_on: retriable-status-codes,connect-failure,refused-stream,reset
                  timeout: 3s
                  metadata_match:
                    filter_metadata:
                      envoy.lb:
                        pool: sepp_rp_A
          http_filters:
          - name: envoy.filters.http.buffer
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
              max_request_bytes: 65535
          - name: envoy.filters.http.dynamic_forward_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
              dns_cache_config:
                name: dynamic_forward_proxy_cache_config
                host_ttl: 31536000s
                dns_lookup_family: V4_ONLY
          - name: envoy.filters.http.router 
  clusters:
  - name: occ_subset
    common_http_protocol_options:
      idle_timeout: 3600s
    connect_timeout: 2s
    dns_lookup_family: V4_ONLY
    http2_protocol_options:
      allow_connect: true
    lb_subset_config:
      fallback_policy: NO_FALLBACK
      subset_selectors:
      - keys:
        - host
      - keys:
        - pool
    upstream_bind_config:
      socket_options:
      - description: TCP_USER_TIMEOUT
        int_value: '5030'
        level: '6'
        name: '18'
      source_address:
        address: 0.0.0.0
        port_value: 0
    upstream_connection_options:
      tcp_keepalive:
        keepalive_interval: 5
        keepalive_probes: 6
        keepalive_time: 5
    type: STRICT_DNS
    load_assignment:
      cluster_name: occ_subset
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-1-mnc-123-mcc-123
                port_value: 80
            health_check_config: {}
            hostname: eric-chfsim-1-mnc-123-mcc-123:80
          health_status: HEALTHY
          load_balancing_weight: 100
          metadata:
            filter_metadata:
              envoy.lb:
                host: eric-chfsim-1-mnc-123-mcc-123
                pool: sepp_rp_A
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-2-mnc-123-mcc-123
                port_value: 80
            health_check_config: {}
            hostname: eric-chfsim-2-mnc-123-mcc-123:80
          health_status: HEALTHY
          load_balancing_weight: 100
          metadata:
            filter_metadata:
              envoy.lb:
                host: eric-chfsim-2-mnc-123-mcc-123
                pool: sepp_rp_A
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-3-mnc-456-mcc-456
                port_value: 80
            health_check_config: {}
            hostname: eric-chfsim-3-mnc-456-mcc-456:80
          health_status: HEALTHY
          load_balancing_weight: 100
          metadata:
            filter_metadata:
              envoy.lb:
                host: eric-chfsim-3-mnc-456-mcc-456
                pool: occ
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-4-mnc-456-mcc-456
                port_value: 80
            health_check_config: {}
            hostname: eric-chfsim-4-mnc-456-mcc-456:80
          health_status: HEALTHY
          load_balancing_weight: 100
          metadata:
            filter_metadata:
              envoy.lb:
                host: eric-chfsim-4-mnc-456-mcc-456
                pool: occ
        - endpoint:
            address:
              socket_address:
                address: eric-chfsim-5-mnc-456-mcc-456
                port_value: 80
            health_check_config: {}
            hostname: eric-chfsim-5-mnc-456-mcc-456:80
          health_status: HEALTHY
          load_balancing_weight: 100
          metadata:
            filter_metadata:
              envoy.lb:
                host: eric-chfsim-5-mnc-456-mcc-456
                pool: occ
